--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
   <header>
     <h1 class="title">Tic Tac Toe</h1>
+    <h1 class="title">hola</h1>
   </header>
   <div class="board" id="board">
   </div>
